Add document's history management

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -12,7 +12,7 @@
 		<div class="collapse navbar-collapse">
 			<form id="formAccess" class="navbar-form navbar-left" method="get" action="/accessDoc">
 				<div class="form-group">
-					<input type="text" class="form-control" id="access-document" name="docID" placeholder="Access to a document">
+					<input type="text" class="form-control" id="access-document" name="docID" placeholder="Access a document">
 				</div>
 				<button type="submit" class="btn btn-default">Access</button>
 			</form>
