--- a/views/private-editor.ejs
+++ b/views/private-editor.ejs
@@ -10,6 +10,7 @@
             <div class="row">
             	<div class="col-md-12"> <!-- Main content -->
             		<div class="row"> <!-- Demo -->
+                        <h1><strong>Edition mode</strong><a href="/<%= docID %>/history" class="btn btn-default pull-right"><span class="glyphicon glyphicon-time">&nbsp;</span>Switch to history mode</a></h1>
             			<div class="col-md-10 col-md-offset-1">
             				<% include editor %>
 	        				<br>
