--- a/views/home.ejs
+++ b/views/home.ejs
@@ -53,6 +53,14 @@
             		</div> <!-- End additionnal informations -->
             	</div> <!-- End main content -->
           	</div>
+            <div class="row">
+                <div class="col-xs-6">
+                    <div class="range range-primary">
+                        <input id="range" type="range" name="range" min="0" max="63" value="0" onchange="displayState();">
+                        <output id="rangePrimary">0</output>
+                    </div>
+                </div>
+            </div>
             <hr>
             <% include footer %>
         </div>
@@ -76,6 +84,17 @@
                     $('#copy-button').tooltip('show');
             ***REMOVED*** );
         ***REMOVED***);
+
+            var currentState = 0;
+            var str = '';
+
+            function displayState() ***REMOVED***
+                var newState = $('#range').val();
+                $('#rangePrimary').val(newState);
+                str = coordinator.updateState(str, currentState, newState);
+                currentState = newState;
+                console.log('Str: ', str);
+        ***REMOVED***
 
             var coordinator = new Mute.Coordinator('<%= docID %>');
             console.log(coordinator);
