--- a/views/scripts-editor.ejs
+++ b/views/scripts-editor.ejs
@@ -1,5 +1,5 @@
-<script src="assets/js/ace/src/ace.js"></script>
+<script src="/assets/js/ace/src/ace.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="assets/js/mute-client/build/mute-client.js"></script>
-<script src="assets/js/zeroclipboard/dist/ZeroClipboard.js"></script>
-<script src="assets/js/awareness-adapter.js"></script>
+<script src="/assets/js/mute-client/build/mute-client.js"></script>
+<script src="/assets/js/zeroclipboard/dist/ZeroClipboard.js"></script>
+<script src="/assets/js/awareness-adapter.js"></script>
