Update references to submodules and views

--- a/views/guide.ejs
+++ b/views/guide.ejs
@@ -181,7 +181,7 @@ AwarenessAdapter.prototype.updateItem = function (data) ***REMOVED***
         ***REMOVED***
 
         </script>
-        <script src="http://d3lp1msu2r81bx.cloudfront.net/kjs/js/lib/kinetic-v5.0.2.min.js"></script>
+        <script src="assets/js/kinetic-v5.0.2.min.js"></script>
         <script defer="defer">
             var flags = ***REMOVED***
                 textEditor: false,
