--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" manifest="mute.manifest">
 	<head>
 		<% include head %>
 		<% include css %>
@@ -11,7 +11,7 @@
             	<div class="col-md-12"> <!-- Main content -->
             		<div class="row"> <!-- Demo -->
             			<h1><strong>Try MUTE, the Multi-User Text Editor</strong></h1>
-            			<div class="col-md-10 col-md-offset-1">
+            			<div class="col-md-12">
 	        				<% include editor %>
 	        				<br>
                             <div class="row">
@@ -53,58 +53,97 @@
             		</div> <!-- End additionnal informations -->
             	</div> <!-- End main content -->
           	</div>
-            <div class="row">
-                <div class="col-xs-6">
-                    <div class="range range-primary">
-                        <input id="range" type="range" name="range" min="0" max="63" value="0" onchange="displayState();">
-                        <output id="rangePrimary">0</output>
-                    </div>
-                </div>
-            </div>
             <hr>
             <% include footer %>
         </div>
 		<% include scripts %>
         <% include scripts-editor %>
+        <% include script-dbjs %>
         <% include notifications %>
 		<script>
 			"use strict";
 
-            hljs.initHighlightingOnLoad();
-            $('#copy-button').tooltip(***REMOVED*** container: 'body', delay: ***REMOVED*** show: 0, hide: 100 ***REMOVED*** ***REMOVED***);
-            var client = new ZeroClipboard(document.getElementById("copy-button"));
+            var serverDB;
+            var coordinator;
+            var editor;
+            var network;
+            var awareness;
 
-            $('#copy-button').on('mouseout', function () ***REMOVED***
-                 $('#copy-button').attr('data-original-title', 'copy to clipboard');
+            var online = false;
+            var posting = $.post('/ajax/testConnection');
+            posting.done(function (data) ***REMOVED***
+                online = true;
+        ***REMOVED***);
+            posting.fail(function () ***REMOVED***
+                console.log('Yo');
+                location.href = '/list';
+        ***REMOVED***);
+            posting.always(function () ***REMOVED***
+                db.open(***REMOVED***
+                    server: 'mute',
+                    version: 1,
+                    schema: ***REMOVED***
+                        models: ***REMOVED***
+                            key: ***REMOVED*** keyPath: 'id' , autoIncrement: true ***REMOVED***,
+                            // Optionally add indexes
+                            indexes: ***REMOVED***
+                                creationDate: ***REMOVED******REMOVED***,
+                                docID: ***REMOVED*** unique: true ***REMOVED***,
+                                history: ***REMOVED******REMOVED***,
+                                lastModificationDate: ***REMOVED******REMOVED***,
+                                replicaNumber: ***REMOVED******REMOVED***,
+                                ropes: ***REMOVED******REMOVED***,
+                                bufferLocalLogootSOp: ***REMOVED******REMOVED***
+                        ***REMOVED***
+                    ***REMOVED***
+                ***REMOVED***
+            ***REMOVED***)
+                .done(function (s) ***REMOVED***
+                    serverDB = s
+                    initPage();
+            ***REMOVED***);
         ***REMOVED***);
 
-            client.on( "ready", function( readyEvent ) ***REMOVED***
-                client.on( "aftercopy", function( event ) ***REMOVED***
-                    $('#copy-button').attr('data-original-title', 'copied!');
-                    $('#copy-button').tooltip('show');
-            ***REMOVED*** );
-        ***REMOVED***);
+            function initPage () ***REMOVED***
+                var currentState = 0;
+                var str = '';
+                var client;
 
-            var currentState = 0;
-            var str = '';
+                console.log('Online:', online);
 
-            function displayState() ***REMOVED***
-                var newState = $('#range').val();
-                $('#rangePrimary').val(newState);
-                str = coordinator.updateState(str, currentState, newState);
-                currentState = newState;
-                console.log('Str: ', str);
+                hljs.initHighlightingOnLoad();
+
+                if(online === true) ***REMOVED***
+                    $('#copy-button').tooltip(***REMOVED*** container: 'body', delay: ***REMOVED*** show: 0, hide: 100 ***REMOVED*** ***REMOVED***);
+                    client = new ZeroClipboard(document.getElementById("copy-button"));
+
+                    $('#copy-button').on('mouseout', function () ***REMOVED***
+                         $('#copy-button').attr('data-original-title', 'copy to clipboard');
+                ***REMOVED***);
+
+                    client.on( "ready", function( readyEvent ) ***REMOVED***
+                        client.on( "aftercopy", function( event ) ***REMOVED***
+                            $('#copy-button').attr('data-original-title', 'copied!');
+                            $('#copy-button').tooltip('show');
+                    ***REMOVED*** );
+                ***REMOVED***);
+            ***REMOVED***
+
+
+                currentState = 0;
+                str = '';
+
+                coordinator = new Mute.Coordinator('<%= docID %>', serverDB);
+                editor = new Mute.AceEditorAdapter('<%= editorID %>', coordinator);
+                coordinator.setEditor(editor);
+                if(online === true) ***REMOVED***
+                    network = new Mute.SocketIOAdapter(coordinator);
+                    coordinator.setNetwork(network);
+            ***REMOVED***
+                awareness = new AwarenessAdapter(coordinator, editor, $('#<%= nbOperationsItemID %>')[0], $('#<%= lastModificationDateItemID %>')[0]);
+                coordinator.init();
+                console.log('<%= docID %>');
         ***REMOVED***
-
-            var coordinator = new Mute.Coordinator('<%= docID %>');
-            console.log(coordinator);
-            var editor = new Mute.AceEditorAdapter('<%= editorID %>', coordinator);
-            coordinator.setEditor(editor);
-            var network = new Mute.SocketIOAdapter(coordinator);
-            coordinator.setNetwork(network);
-            var awareness = new AwarenessAdapter(coordinator, editor, $('#<%= nbOperationsItemID %>')[0], $('#<%= lastModificationDateItemID %>')[0]);
-
-            console.log('docID: <%= docID %>');
         </script>
 	</body>
 </html>
