Add error 404 page and debug route

--- a/views/history-viewer.ejs
+++ b/views/history-viewer.ejs
@@ -10,7 +10,7 @@
             <div class="row">
             	<div class="col-md-12"> <!-- Main content -->
             		<div class="row"> <!-- Demo -->
-                        <h1><strong>History mode</strong><a href="/<%= docID %>" class="btn btn-default pull-right"><span class="glyphicon glyphicon-pencil">&nbsp;</span>Switch to edition mode</a></h1>
+                        <h1><strong>History mode</strong><a href="/doc/<%= docID %>" class="btn btn-default pull-right"><span class="glyphicon glyphicon-pencil">&nbsp;</span>Switch to edition mode</a></h1>
             			<div class="col-md-10 col-md-offset-1">
                             <div class="row">
                                 <center>
