Add better management of offline mode and history mode

--- a/views/css.ejs
+++ b/views/css.ejs
@@ -3,3 +3,4 @@
 <link rel="stylesheet" href="/assets/css/mute.css">
 <link rel="stylesheet" href="/assets/css/highlightjs.min.css">
 <link rel="stylesheet" href="/assets/css/range-selectors.css">
+<link rel="stylesheet" href="/assets/css/offline-theme-default-indicator.css">
