--- a/views/code.ejs
+++ b/views/code.ejs
@@ -1,5 +1,5 @@
 <h1><strong>Use MUTE on your own website</strong></h1>
-                            <p class="lead">Install the <a target="_blank" href="https://github.com/MatthieuNICOLAS/mute-client">client-side</a> and <a target="_blank" href="https://github.com/MatthieuNICOLAS/mute-server">server-side</a> modules. Then add theses lines to your code:</p> 
+                            <p class="lead">Install the <a target="_blank" href="https://github.com/MatthieuNICOLAS/mute-client">client-side</a> and <a target="_blank" href="https://github.com/MatthieuNICOLAS/mute-server">server-side</a> modules. Then add these lines to your code:</p> 
                             <strong>In your app.js file:</strong>
                             <pre>
 <code>var server = require('http').createServer(app);
