--- a/views/private-editor.ejs
+++ b/views/private-editor.ejs
@@ -10,9 +10,43 @@
             <div class="row">
             	<div class="col-md-12"> <!-- Main content -->
             		<div class="row"> <!-- Demo -->
-                        <h1><strong><%= docID %></strong><a href="/doc/<%= docID %>/history" class="btn btn-default pull-right"><span class="glyphicon glyphicon-time">&nbsp;</span>Switch to history mode</a></h1>
+                        <h1>
+                            <strong><%= docID %></strong>
+                            <div class="pull-right">
+                                <button id="btnHistoryMode" class="btn btn-default" onclick="switchToHistoryMode()">
+                                    <span class="glyphicon glyphicon-time" ></span>
+                                    Switch to history mode
+                                </button>
+                                <button id="btnEditionMode" class="btn btn-default hide" onclick="switchToEditionMode()">
+                                    <span class="glyphicon glyphicon-pencil"></span>
+                                    Switch to edition mode
+                                </button>
+                                <button id="btnOnlineMode" class="btn btn-default" onclick="switchToOnlineMode()">
+                                    <span class="glyphicon glyphicon-log-in" ></span>
+                                    Switch to online mode
+                                </button>
+                                <button id="btnOfflineMode" class="btn btn-default hide" onclick="switchToOfflineMode()">
+                                    <span class="glyphicon glyphicon-log-out"></span>
+                                    Switch to offline mode
+                                </button>
+                                <div id="connectionIndicator" class="offline-ui offline-ui-down">
+                                    Offline!
+                                </div>
+                            </div>
+
+                        </h1>
             			<div class="col-md-10 col-md-offset-1">
-            				<% include editor %>
+            				<div id="historySlider" class="range range-primary hide">
+                                <button class="btn btn-default btn-sm" type="button" onclick="prevState()">
+                                    <span class="glyphicon glyphicon-chevron-left"></span>
+                                </button>
+                                <input id="range" type="range" name="range" min="0" max="1" value="1" oninput="displayState();" onclick="console.log('Yo');displayState();">
+                                <output onchange="displayState();" id="rangePrimary">0</output>
+                                <button class="btn btn-default btn-sm" type="button" onclick="nextState()">
+                                    <span class="glyphicon glyphicon-chevron-right"></span>
+                                </button>
+                            </div>
+                            <% include editor %>
 	        				<br>
                     		<div class="row">
                                 <div class="col-md-6">
@@ -26,7 +60,9 @@
                                                 <div class="input-group">
                                                     <input type="text" class="form-control" id="link" value="<%= link %>" readonly="readonly" style="background-color: white;">
                                                     <span class="input-group-btn">
-                                                        <button type="button" id="copy-button" class="btn btn-default" data-clipboard-text="<%= link %>" data-toggle="tooltip" data-placement="bottom" title="copy to clipboard" style="height:34px;"><img src="assets/img/icon-clipboard.png"></button>
+                                                        <button type="button" id="copy-button" class="btn btn-default" data-clipboard-text="<%= link %>" data-toggle="tooltip" data-placement="bottom" title="copy to clipboard" style="height:34px;">
+                                                            <img src="/assets/img/icon-clipboard.png">
+                                                        </button>
                                                     </span>
                                                 </div>
                                             </div>
@@ -63,7 +99,6 @@
             var online = false;
             var posting = $.post('/ajax/testConnection');
             posting.done(function (data) ***REMOVED***
-                console.log('Ca a fonctionné!');
                 online = true;
         ***REMOVED***);
             posting.always(function () ***REMOVED***
@@ -81,7 +116,8 @@
                                 lastModificationDate: ***REMOVED******REMOVED***,
                                 replicaNumber: ***REMOVED******REMOVED***,
                                 ropes: ***REMOVED******REMOVED***,
-                                bufferLocalLogootSOp: ***REMOVED******REMOVED***
+                                bufferLocalLogootSOp: ***REMOVED******REMOVED***,
+                                mode: ***REMOVED******REMOVED***
                         ***REMOVED***
                     ***REMOVED***
                 ***REMOVED***
@@ -97,7 +133,30 @@
                 if(online === true) ***REMOVED***
                     network = new Mute.SocketIOAdapter(coordinator);
                     coordinator.setNetwork(network);
+                    network.on('disconnect', function () ***REMOVED***
+                        $('#btnOfflineMode').addClass('hide');
+                        $('#btnOnlineMode').removeClass('hide');
+                        $('#connectionIndicator').removeClass('offline-ui-up').addClass('offline-ui-down').html('Offline!');
+                ***REMOVED***);
+                    network.on('connect', function () ***REMOVED***
+                        $('#btnOnlineMode').addClass('hide');
+                        $('#btnOfflineMode').removeClass('hide');
+                        $('#connectionIndicator').removeClass('offline-ui-down').addClass('offline-ui-up').html('Online!');
+                ***REMOVED***);
             ***REMOVED***
+                coordinator.on('initEditor', function (data) ***REMOVED***
+                    str = '';
+                    currentState = 0;
+            ***REMOVED***);
+                coordinator.on('updateHistoryScrollerRange', function (data) ***REMOVED***
+                    $('#range').attr('max', data.length);
+                    //displayState();
+            ***REMOVED***);
+                coordinator.on('updateHistoryScrollerValue', function (data) ***REMOVED***
+                    $('#range').attr('value', data.length);
+                    displayState();
+            ***REMOVED***);
+
                 coordinator.init();
         ***REMOVED***
 
@@ -112,11 +171,11 @@
                          $('#copy-button').attr('data-original-title', 'copy to clipboard');
                 ***REMOVED***);
 
-                    client.on( "ready", function( readyEvent ) ***REMOVED***
-                        client.on( "aftercopy", function( event ) ***REMOVED***
+                    client.on('ready', function (readyEvent) ***REMOVED***
+                        client.on('aftercopy', function (event) ***REMOVED***
                             $('#copy-button').attr('data-original-title', 'copied!');
                             $('#copy-button').tooltip('show');
-                    ***REMOVED*** );
+                    ***REMOVED***);
                 ***REMOVED***);
             ***REMOVED***
 
@@ -127,6 +186,56 @@
                     initMute();
             ***REMOVED***
         ***REMOVED***
+
+            var currentState = 0;
+            var str = '';
+
+            function prevState() ***REMOVED***
+                $('#range').val(currentState-1);
+                displayState();
+        ***REMOVED***
+
+            function nextState() ***REMOVED***
+                $('#range').val(currentState+1);
+                displayState();
+        ***REMOVED***
+
+            function displayState() ***REMOVED***
+                var newState = parseInt($('#range').val());
+                $('#rangePrimary').val(newState);
+                if(currentState <= coordinator.getHistoryLength()) ***REMOVED***
+                    str = coordinator.updateState(str, currentState, newState);    
+            ***REMOVED***
+                currentState = newState;
+                editor.editor.session.doc.setValue(str);
+        ***REMOVED***
+
+            function switchToHistoryMode() ***REMOVED***
+                var length = coordinator.getHistoryLength();
+                $('#btnHistoryMode').addClass('hide');
+                $('#btnEditionMode').removeClass('hide');
+                $('#historySlider').removeClass('hide');
+                coordinator.editor.toHistoryMode();
+                $('#range').attr('max', length);
+                displayState();
+        ***REMOVED***
+
+            function switchToEditionMode() ***REMOVED***
+                $('#btnEditionMode').addClass('hide');
+                $('#historySlider').addClass('hide');
+                $('#btnHistoryMode').removeClass('hide');
+                editor.editor.session.doc.setValue(coordinator.ropes.str);
+                coordinator.editor.toEditionMode();
+        ***REMOVED***
+
+            function switchToOnlineMode() ***REMOVED***
+                coordinator.toOnlineMode();
+        ***REMOVED***
+
+            function switchToOfflineMode() ***REMOVED***
+                coordinator.toOfflineMode();
+        ***REMOVED***
+
             console.log('docID: <%= docID %>');
         </script>
 	</body>
